develop_battery: folders rearranged as discussed with D.Thomas. Battery script adapted for parallel tests (still to be tested). Minor changes in the PfemInterface and MtfInterface: path to PFEM and Metafor executable not explicitly given anymore (added to my personal PYTHONPATH), in order to clean things up if we work with other people (e.g. Henk Seubers)

--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,7 @@
 
 exe/workspace/
 
-apps/PFEM_Metafor/workspace/
-apps/SU2_Metafor/workspace/
-apps/SU2_GetDP/workspace/
+apps/
 
 tests/FSICoupler/workspace/
 tests/Metafor/workspace/
