--- a/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
@@ -101,7 +101,7 @@ REF_ORIGIN_MOMENT_Z = 0.00
 %
 % Reference length for pitching, rolling, and yawing non-dimensional
 % moment (m or in)
-REF_LENGTH_MOMENT= 0.01
+REF_LENGTH= 0.01
 %
 % Reference area for force coefficients (0 implies automatic
 % calculation) (m^2 or in^2)
