develop_parallel: C++ parts of CUPyDO compiled on windows. .gitignore: *pyd added. CMakeLists.txt: installation instructions added. Now everything generated by the compiler is in the 'build' folder and the installer manages the copy of 'CCupydo.py' and '_CCupydo.pyd' into the 'CUPyDO/ccupydo' folder. FSICoupler.py: 'return value' in mpiAllReduce replaces 'return sendBuff' which was wrong for serial use. include/CCupydo.i: small changes to enhance robustness (i.e. disown() feature for directors which avoids memory leaks). cManager.h/cpp: correction of a bug, 'double' passed instead of 'int'. src/cAdt.cpp: small correction size_t -> unsigned long to avoid warnings at compilation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,6 @@
 PROJECT(CUPyDO)
 CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
-SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../ccupydo CACHE PATH
-                        "Single output directory for building all libraries.")
-SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/../ccupydo CACHE PATH
-                        "Single output directory for building all executables.")
-
 MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
 
 LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")
@@ -82,8 +77,6 @@ ELSE(WITH_MPI)
   SET(CMAKE_SWIG_FLAGS "")
 ENDIF(WITH_MPI)
 
-SET(CMAKE_SWIG_OUTDIR ${PROJECT_SOURCE_DIR}/ccupydo)
-
 SET_SOURCE_FILES_PROPERTIES(${ISRCS} PROPERTIES CPLUSPLUS ON)
 
 SET(SWINCFLAGS -I${PROJECT_SOURCE_DIR} )
@@ -93,3 +86,7 @@ SET_SOURCE_FILES_PROPERTIES(${ISRCS} PROPERTIES SWIG_FLAGS "${SWINCFLAGS}")
 SWIG_ADD_MODULE(CCupydo python ${ISRCS} ${SRCS})
 
 SWIG_LINK_LIBRARIES(CCupydo ${PYTHON_LIBRARIES} ${MPI_LIBRARIES} ${PETSC_LIBRARIES})
+
+# --- Install ---
+INSTALL_TARGETS(/ccupydo _CCupydo)
+INSTALL_FILES(/ccupydo FILES "${PROJECT_BINARY_DIR}/CCupydo.py") 
