Print the build type on screen during cmake config.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ IF( NOT CMAKE_BUILD_TYPE )
 MinSizeRel."
        FORCE )
 ENDIF()
+MESSAGE(STATUS "Build type : ${CMAKE_BUILD_TYPE}")
 
 # Check for C++11
 INCLUDE(CheckCXXCompilerFlag)
