--- a/tests/Flow_RBM/staticAirfoil_solid.cfg
+++ b/tests/Flow_RBM/staticAirfoil_solid.cfg
@@ -11,7 +11,7 @@
 % WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 % See the License for the specific language governing permissions and
 % limitations under the License. 
-
+%
 % Unsteady (dynamic) simulation
 UNSTEADY_SIMULATION = NO
 % CSD solver (NATIVE or METAFOR)
@@ -23,24 +23,24 @@ MOVING_MARKER = airfoil
 %
 % If NATIVE
 % Integration time step 
-DELTA_T = 0.1
+DELTA_T = 0.0
 % Type of structural problem (SPRING_HOR or SPRING_VER or AIRFOIL)
 STRUCT_TYPE = AIRFOIL
 % Body mass
-SPRING_MASS = 100.0
+SPRING_MASS = 0.0
 %Inertia around CG
-INERTIA_CG = 100.0
+INERTIA_CG = 0.0
 %Inertia around flexural axis
-INERTIA_FLEXURAL = 10.0
+INERTIA_FLEXURAL = 0.0
 % Spring stiffness
 SPRING_STIFFNESS = 1000.0
 % Spring damping
 SPRING_DAMPING = 0.0
-%
+% Torsional stiffness
 TORSIONAL_STIFFNESS = 1000.0
-%
+% Torsional damping
 TORSIONAL_DAMPING = 0.0
-%
+% Chord
 CORD = 1
 %Position of the flexural axis
 FLEXURAL_AXIS = 0.25
@@ -52,7 +52,6 @@ GRAVITY_CENTER = 0.375
 INITIAL_DISP = 0.0
 %Pitching
 INITIAL_ANGLE = 0.0
-%INITIAL_ANGLE = 0.0
 %
 % Restart solution from previous computations
 RESTART_SOL = NO
@@ -63,8 +62,8 @@ RESTART_FILE = restart_solid.dat
 % Start time (usually 0) in seconds
 START_TIME = 0.0
 % End time in seconds
-STOP_TIME = 1.0
+STOP_TIME = 0.0
 % Integration algorithm (ALPHAGEN, RK4)
-INTEGRATION_ALGO = ALPHAGEN
+%INTEGRATION_ALGO = ALPHAGEN
 % Integration parameter
-RHO = 0.8
+%RHO = 0.8
