--- a/tests/Flow_RBM/staticAirfoil_solid.cfg
+++ b/tests/Flow_RBM/staticAirfoil_solid.cfg
@@ -17,7 +17,7 @@ UNSTEADY_SIMULATION = NO
 % CSD solver (NATIVE or METAFOR)
 CSD_SOLVER = NATIVE
 %
-MESH_FILE = ../../staticAirfoil_solid.su2
+MESH_FILE = ../../models/staticAirfoil_solid.su2
 %
 MOVING_MARKER = airfoil
 %
