Refact output in Interfaces. Add ctest verif strategy in SU2_RBM and SU2_Mtf. Add models folder for better sorting. Imprvd Flow Iterface and test.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,6 @@
-
+# Add tests
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_RBM)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
 
