--- a/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
@@ -677,7 +677,7 @@ CAUCHY_FUNC_ADJFLOW= SENS_GEOMETRY
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= ../../../tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_fluidMesh.su2
+MESH_FILENAME= ../../tests/SU2_RBM/models/PitchPlungeAirfoil_BGS_parallel_fluidMesh.su2
 %
 % Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
