--- a/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_RBMConf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_RBMConf.cfg
@@ -17,7 +17,7 @@ UNSTEADY_SIMULATION = YES
 % CSD solver (NATIVE or METAFOR)
 CSD_SOLVER = NATIVE
 %
-MESH_FILE = ../../../tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_fluidMesh.su2
+MESH_FILE = ../../tests/SU2_RBM/models/PitchPlungeAirfoil_BGS_parallel_fluidMesh.su2
 %
 MOVING_MARKER = airfoil
 %
