Corr warning from CMake. Add and updt ctest battery for Pfem and SU2 Mtf.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,7 +116,13 @@ SET(SWINCFLAGS -I${PROJECT_SOURCE_DIR} )
 
 SET_SOURCE_FILES_PROPERTIES(${ISRCS} PROPERTIES SWIG_FLAGS "${SWINCFLAGS}")
 
-SWIG_ADD_MODULE(CCupydo python ${ISRCS} ${SRCS})
+IF(${CMAKE_VERSION} VERSION_LESS "3.8.0")
+  SWIG_ADD_MODULE(CCupydo python ${ISRCS} ${SRCS})
+ELSE()
+  SWIG_ADD_LIBRARY(CCupydo
+                   LANGUAGE python
+                   SOURCES ${ISRCS} ${SRCS})
+ENDIF()
 
 SWIG_LINK_LIBRARIES(CCupydo ${PYTHON_LIBRARIES} ${MPI_LIBRARIES} ${PETSC_LIBRARIES})
 
