--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,6 @@ IF(WITH_PYWRAPPER)
   SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}")
   MESSAGE(STATUS "SWIG_EXECUTABLE=${SWIG_EXECUTABLE}")
   IF(WITH_MPI)
-    FIND_PACKAGE(PETSc4Py REQUIRED)
     FIND_PACKAGE(Mpi4Py REQUIRED)
   ENDIF(WITH_MPI)
 ENDIF(WITH_PYWRAPPER)
@@ -92,8 +91,9 @@ INCLUDE_DIRECTORIES( ${MPI_INCLUDE_PATH} ${PETSC_INCLUDE_PATH} )
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 IF(WITH_MPI)
-  ADD_EXECUTABLE(test_CFlexInterfaceData src/test/test_CFlexInterfaceData.cpp src/cFlexInterfaceData.cpp)
-  TARGET_LINK_LIBRARIES(test_CFlexInterfaceData ${MPI_LIBRARIES} ${PETSC_LIBRARIES})
+  INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
+  ADD_EXECUTABLE(test_CGeneral src/cTest_general.cpp)
+  TARGET_LINK_LIBRARIES(test_CGeneral ${MPI_LIBRARIES} ${PETSC_LIBRARIES})
 ENDIF(WITH_MPI)
 
 #-------------------------------------------------------------
@@ -133,7 +133,7 @@ MESSAGE(STATUS "Installation directory : ${CMAKE_INSTALL_PREFIX}")
 INSTALL_TARGETS(/ccupydo _CCupydo)
 INSTALL_FILES(/ccupydo FILES "${PROJECT_BINARY_DIR}/CCupydo.py")
 IF(WITH_MPI)
-  INSTALL_TARGETS(/ccupydo test_CFlexInterfaceData)
+  INSTALL_TARGETS(/ccupydo test_CGeneral)
 ENDIF(WITH_MPI)
 
 # --- Enable CTest ---
