Another change to CMakeLists and README should be alright this time)!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ IF(WITH_PYWRAPPER)
   SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}")
   MESSAGE(STATUS "SWIG_EXECUTABLE=${SWIG_EXECUTABLE}")
   IF(WITH_MPI)
+    FIND_PACKAGE(PETSc4Py REQUIRED)
     FIND_PACKAGE(Mpi4Py REQUIRED)
   ENDIF(WITH_MPI)
 ENDIF(WITH_PYWRAPPER)
