Corrected some encoding issues, changed filenames for NMM testcase mesh

--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -1,4 +1,4 @@
-% Copyright 2018 University of LiÃ¨ge
+% Copyright 2018 University of Liège
 % 
 % Licensed under the Apache License, Version 2.0 (the "License");
 % you may not use this file except in compliance with the License.
@@ -676,7 +676,7 @@ CAUCHY_FUNC_ADJFLOW= SENS_GEOMETRY
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Mesh input file
-MESH_FILENAME= ../../tests/SU2_RBM/models/fluid_mesh.su2
+MESH_FILENAME= ../../tests/SU2_RBM/models/PitchPlungeN0012_fluid_mesh.su2
 %
 % Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
