--- a/tests/SU2_Modal/agard_dynamic_fluid.cfg
+++ b/tests/SU2_Modal/agard_dynamic_fluid.cfg
@@ -1,17 +1,3 @@
-% Copyright 2018 University of LiÃ¨ge
-% 
-% Licensed under the Apache License, Version 2.0 (the "License");
-% you may not use this file except in compliance with the License.
-% You may obtain a copy of the License at
-%   
-%     http://www.apache.org/licenses/LICENSE-2.0
-% 
-% Unless required by applicable law or agreed to in writing, software
-% distributed under the License is distributed on an "AS IS" BASIS,
-% WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-% See the License for the specific language governing permissions and
-% limitations under the License. 
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
@@ -39,9 +25,6 @@ MATH_PROBLEM= DIRECT
 % Regime type (COMPRESSIBLE, INCOMPRESSIBLE)
 REGIME_TYPE= COMPRESSIBLE
 %
-% Axisymmetric simulation, only compressible flows (NO, YES)
-AXISYMMETRIC= NO
-%
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 %
@@ -64,10 +47,10 @@ SYSTEM_MEASUREMENTS= SI
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
-MACH_NUMBER= 0.8
+MACH_NUMBER= 9.000000e-01
 %
 % Angle of attack (degrees, only for compressible flows)
-AOA= 1.0
+AOA= 0
 %
 % Side-slip angle (degrees, only for compressible flows)
 SIDESLIP_ANGLE= 0.0
@@ -81,13 +64,13 @@ INIT_OPTION= TD_CONDITIONS
 FREESTREAM_OPTION= TEMPERATURE_FS
 %
 % Free-stream pressure (101325.0 N/m^2, 2116.216 psf by default)
-FREESTREAM_PRESSURE= 6412.658
+FREESTREAM_PRESSURE= 9.026017e+03
 %
 % Free-stream temperature (288.15 K, 518.67 R by default)
-FREESTREAM_TEMPERATURE= 237.422
+FREESTREAM_TEMPERATURE= 3.161132e+02
 %
 % Reynolds number (non-dimensional, based on the free-stream values)
-%REYNOLDS_NUMBER= 1600
+%REYNOLDS_NUMBER= 829130
 %
 % Reynolds length (1 m, 1 inch by default)
 REYNOLDS_LENGTH= 0.470
@@ -100,14 +83,14 @@ REF_ORIGIN_MOMENT_Y = 0.00
 REF_ORIGIN_MOMENT_Z = 0.00
 %
 % Reference length for moment non-dimensional coefficients (m or in)
-REF_LENGTH= 0.470
+REF_LENGTH= 4.700000e-01
 %
 % Reference area for non-dimensional force coefficients (0 implies automatic
 % calculation) (m^2 or in^2)
-REF_AREA= 0.353
+REF_AREA= 3.530000e-01
 %
 % Aircraft semi-span (m or in)
-SEMI_SPAN= 0.762
+SEMI_SPAN= 7.620000e-01
 %
 % Flow non-dimensionalization (DIMENSIONAL, FREESTREAM_PRESS_EQ_ONE,
 %                              FREESTREAM_VEL_EQ_MACH, FREESTREAM_VEL_EQ_ONE)
@@ -120,11 +103,11 @@ FLUID_MODEL= STANDARD_AIR
 %
 % Ratio of specific heats (1.4 default and the value is hardcoded
 %                          for the model STANDARD_AIR)
-GAMMA_VALUE= 1.4
+GAMMA_VALUE= 1.400000e+00
 %
 % Specific gas constant (287.058 J/kg*K default and this value is hardcoded
 %                        for the model STANDARD_AIR)
-GAS_CONSTANT= 287.058
+GAS_CONSTANT= 2.870580e+02
 %
 % Critical Temperature (131.00 K by default)
 CRITICAL_TEMPERATURE= 131.00
@@ -141,16 +124,16 @@ ACENTRIC_FACTOR= 0.035
 VISCOSITY_MODEL= SUTHERLAND
 %
 % Molecular Viscosity that would be constant (1.716E-5 by default)
-MU_CONSTANT= 1.82E-4
+MU_CONSTANT= 1.716E-5
 %
 % Sutherland Viscosity Ref (1.716E-5 default value for AIR SI)
-MU_REF= 1.716E-5
+MU_REF= 1.716000e-05
 %
 % Sutherland Temperature Ref (273.15 K default value for AIR SI)
-MU_T_REF= 273.15
+MU_T_REF= 2.731500e+02
 %
 % Sutherland constant (110.4 default value for AIR SI)
-SUTHERLAND_CONSTANT= 110.4
+SUTHERLAND_CONSTANT= 1.104000e+02
 
 % --------------------------- THERMAL CONDUCTIVITY MODEL ----------------------%
 %
@@ -164,20 +147,19 @@ KT_CONSTANT= 0.0257
 %
 % Unsteady simulation (NO, TIME_STEPPING, DUAL_TIME_STEPPING-1ST_ORDER,
 %                      DUAL_TIME_STEPPING-2ND_ORDER, HARMONIC_BALANCE)
-UNSTEADY_SIMULATION= NO
+UNSTEADY_SIMULATION= DUAL_TIME_STEPPING-2ND_ORDER
 %
 % Time Step for dual time stepping simulations (s) -- Only used when UNST_CFL_NUMBER = 0.0
-UNST_TIMESTEP= 0.01
+UNST_TIMESTEP= 6.392969e-04
 %
 % Total Physical Time for dual time stepping simulations (s)
-UNST_TIME= 60.0
+UNST_TIME= 1.537509e-01
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
 %
 % Number of internal iterations (dual time method)
-%UNST_INT_ITER= 50
-UNST_INT_ITER= 5
+UNST_INT_ITER= 110
 %
 % Iteration number to begin unsteady restarts
 UNST_RESTART_ITER= 0
@@ -195,7 +177,7 @@ GRID_MOVEMENT_KIND= FLUID_STRUCTURE
 %
 % Motion mach number (non-dimensional). Used for initializing a viscous flow
 % with the Reynolds number and for computing force coeffs. with dynamic meshes.
-MACH_MOTION= 0.8
+MACH_MOTION= 9.000000e-01
 %
 % Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
 MARKER_MOVING= ( airfoil )
@@ -242,14 +224,6 @@ PLUNGING_AMPL_Z= 0.0
 %
 % Move Motion Origin for marker moving (1 or 0)
 MOVE_MOTION_ORIGIN = 1
-
-% ----------------------- BODY FORCE DEFINITION -------------------------------%
-%
-% Apply a body force as a source term (NO, YES)
-BODY_FORCE= NO
-%
-% Vector of body force values (BodyForce_X, BodyForce_Y, BodyForce_Z)
-BODY_FORCE_VECTOR= ( 0.0, 0.0, 0.0 )
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
@@ -376,7 +350,7 @@ ADJ_SHARP_LIMITER_COEFF= 3.0
 LIMITER_ITER= 999999
 %
 % 1st order artificial dissipation coefficients for
-%     the Laxâ€“Friedrichs method ( 0.15 by default )
+%     the Lax–Friedrichs method ( 0.15 by default )
 LAX_SENSOR_COEFF= 0.15
 %
 % 2nd and 4th order artificial dissipation coefficients for
@@ -384,7 +358,7 @@ LAX_SENSOR_COEFF= 0.15
 JST_SENSOR_COEFF= ( 0.5, 0.02 )
 %
 % 1st order artificial dissipation coefficients for
-%     the adjoint Laxâ€“Friedrichs method ( 0.15 by default )
+%     the adjoint Lax–Friedrichs method ( 0.15 by default )
 ADJ_LAX_SENSOR_COEFF= 0.15
 %
 % 2nd, and 4th order artificial dissipation coefficients for
@@ -528,7 +502,7 @@ STARTCONV_ITER= 5
 CAUCHY_ELEMS= 10
 %
 % Epsilon to control the series convergence
-CAUCHY_EPS= 1E-6
+CAUCHY_EPS= 1E-5
 %
 % Direct function to apply the convergence criteria (LIFT, DRAG, NEARFIELD_PRESS)
 CAUCHY_FUNC_FLOW= LIFT
@@ -588,7 +562,7 @@ SURFACE_FLOW_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 %
 % Writing solution file frequency
-WRT_SOL_FREQ= 200
+WRT_SOL_FREQ= 250
 %
 % Writing solution file frequency for physical time steps (dual time)
 WRT_SOL_FREQ_DUALTIME= 1
@@ -622,3 +596,4 @@ WRT_BINARY_RESTART= YES
 %
 % Read binary restart files (YES, NO)
 READ_BINARY_RESTART= YES
+
