--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,9 @@
 # Add tests
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_RBM)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Modal)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
 
