--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2018 University of Liège
+# Copyright 2018 University of Liï¿½ge
 # 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -17,10 +17,8 @@
 #
 # Authors : D. THOMAS.
 
+CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
 PROJECT(CUPyDO)
-CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
-
-MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
 
 LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")
 
@@ -29,35 +27,24 @@ INCLUDE(cupyMacros)
 
 # Type of build
 IF( NOT CMAKE_BUILD_TYPE )
-  SET( CMAKE_BUILD_TYPE Release CACHE STRING
-       "Choose the type of build, options are: None Debug Release RelWithDebInfo
-MinSizeRel."
-       FORCE )
+  SET( CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE )
 ENDIF()
 MESSAGE(STATUS "Build type : ${CMAKE_BUILD_TYPE}")
 
-# Check for C++11
-INCLUDE(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-IF(COMPILER_SUPPORTS_CXX11)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-ELSEIF(COMPILER_SUPPORTS_CXX0X)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-ELSE()
-    MESSAGE(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support. Please use a different C++ compiler.")
-ENDIF()
+# -- C++11
+SET(CMAKE_CXX_STANDARD 11) # newer way to set C++11 (requires cmake>=3.1)
+SET(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 
 # Add warnings during compilation when build type is Debug
 IF(CMAKE_BUILD_TYPE MATCHES Debug)
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
-ENDIF(CMAKE_BUILD_TYPE MATCHES Debug)
+ENDIF()
 
 
 # Build for parallel run using MPI (default is OFF)
 OPTION(WITH_MPI "Build for parallel run" OFF)
-# Build Python wrapper (default is ON)
-OPTION(WITH_PYWRAPPER "Build with the Python bindings" ON)
+
 
 IF(WITH_MPI)
   FIND_PACKAGE(MPI REQUIRED)
@@ -69,23 +56,23 @@ IF(WITH_MPI)
   ENDIF(MPI_FOUND)
 ENDIF(WITH_MPI)
 
-IF(WITH_PYWRAPPER)
-  FIND_PACKAGE(PythonInterp REQUIRED)
-  FIND_PACKAGE(PythonLibs REQUIRED)
-  MESSAGE(STATUS "PYTHONINTERP_FOUND=${PYTHONINTERP_FOUND}")
-  MESSAGE(STATUS "PYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}")
-  MESSAGE(STATUS "PYTHONLIBS_FOUND=${PYTHONLIBS_FOUND}")
-  MESSAGE(STATUS "PYTHON_LIBRARIES=${PYTHON_LIBRARIES}")
-  MESSAGE(STATUS "PYTHON_INCLUDE_PATH=${PYTHON_INCLUDE_PATH}")
-  FIND_PACKAGE(NUMPY REQUIRED)
-  FIND_PACKAGE(SWIG REQUIRED)
-  SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}")
-  MESSAGE(STATUS "SWIG_EXECUTABLE=${SWIG_EXECUTABLE}")
-  IF(WITH_MPI)
-    FIND_PACKAGE(PETSc4Py REQUIRED)
-    FIND_PACKAGE(Mpi4Py REQUIRED)
-  ENDIF(WITH_MPI)
-ENDIF(WITH_PYWRAPPER)
+
+FIND_PACKAGE(PythonInterp REQUIRED)
+FIND_PACKAGE(PythonLibs REQUIRED)
+MESSAGE(STATUS "PYTHONINTERP_FOUND=${PYTHONINTERP_FOUND}")
+MESSAGE(STATUS "PYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}")
+MESSAGE(STATUS "PYTHONLIBS_FOUND=${PYTHONLIBS_FOUND}")
+MESSAGE(STATUS "PYTHON_LIBRARIES=${PYTHON_LIBRARIES}")
+MESSAGE(STATUS "PYTHON_INCLUDE_PATH=${PYTHON_INCLUDE_PATH}")
+FIND_PACKAGE(NUMPY REQUIRED)
+FIND_PACKAGE(SWIG REQUIRED)
+SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}")
+MESSAGE(STATUS "SWIG_EXECUTABLE=${SWIG_EXECUTABLE}")
+IF(WITH_MPI)
+  FIND_PACKAGE(PETSc4Py REQUIRED)
+  FIND_PACKAGE(Mpi4Py REQUIRED)
+ENDIF(WITH_MPI)
+
 
 INCLUDE_DIRECTORIES( ${MPI_INCLUDE_PATH} ${PETSC_INCLUDE_PATH} )
 
@@ -100,9 +87,15 @@ SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 #-------------------------------------------------------------
 INCLUDE(${SWIG_USE_FILE})
 
-INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/include ${PYTHON_INCLUDE_PATH} ${NUMPY_INCLUDE_DIR} ${PETSC4PY_INCLUDE_DIR} ${MPI4PY_INCLUDE_DIR})
+INCLUDE_DIRECTORIES(  ${PROJECT_SOURCE_DIR}/include 
+                      ${PYTHON_INCLUDE_PATH} 
+                      ${NUMPY_INCLUDE_DIR} 
+                      ${PETSC4PY_INCLUDE_DIR} 
+                      ${MPI4PY_INCLUDE_DIR})
 
-FILE(GLOB SRCS src/cInterpolator.cpp src/cManager.cpp src/cFlexInterfaceData.cpp src/cInterfaceMatrix.cpp src/cLinearSolver.cpp src/adtcore.cpp src/cAdt.cpp include/cInterpolator.h include/cManager.h include/cMpi.h include/cFlexInterfaceData.h include/cInterfaceMatrix.h include/cLinearSolver.h include/adtcore.h include/cAdt.h )
+FILE(GLOB SRCS src/*.h src/*.cpp)
+
+
 FILE(GLOB ISRCS include/CCupydo.i)
 
 IF(WITH_MPI)
@@ -138,7 +131,7 @@ INSTALL_FILES(/ccupydo FILES "${PROJECT_BINARY_DIR}/CCupydo.py")
 #ENDIF(WITH_MPI)
 
 # --- Enable CTest ---
-enable_testing()
+ENABLE_TESTING()
 ADD_SUBDIRECTORY(tests)
 
 
