--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,12 @@
 # Add tests
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_RBM)
+IF(NOT WIN32) # temporarily disabled on Windows
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_RBM)
+ENDIF()
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Modal)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM_Metafor)
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
-
+IF(NOT WIN32)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
+ENDIF()
