VLM+Mtf test on `ctest`

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -10,3 +10,4 @@ IF(NOT WIN32)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
 ENDIF()
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/VLM_Metafor)
