--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ MESSAGE(STATUS "Build type : ${CMAKE_BUILD_TYPE}")
 
 # Options
 OPTION(WITH_MPI "Build for parallel run" OFF)
+OPTION(WITH_PY2 "Build using Python 2.7" OFF)
 
 # -- C++11
 SET(CMAKE_CXX_STANDARD 11) # newer way to set C++11 (requires cmake>=3.1)
@@ -55,8 +56,13 @@ IF(WITH_MPI)
 ENDIF(WITH_MPI)
 
 # Python/SWIG
-FIND_PACKAGE(PythonInterp 2.7 REQUIRED)
-FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
+IF(WITH_PY2)
+    FIND_PACKAGE(PythonInterp 2.7 REQUIRED)
+    FIND_PACKAGE(PythonLibs 2.7 REQUIRED)
+ELSE(WITH_PY2)
+    FIND_PACKAGE(PythonInterp 3 REQUIRED)
+    FIND_PACKAGE(PythonLibs 3 REQUIRED)
+ENDIF(WITH_PY2)
 MESSAGE(STATUS "PYTHONINTERP_FOUND=${PYTHONINTERP_FOUND}")
 MESSAGE(STATUS "PYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}")
 MESSAGE(STATUS "PYTHONLIBS_FOUND=${PYTHONLIBS_FOUND}")
