--- a/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
@@ -19,16 +19,17 @@
 % Author: ___________________________________________________________________  %
 % Institution: ______________________________________________________________  %
 % Date: __________                                                             %
-% File Version 5.0.0 "Raven"                                                   %
+% File Version 7.0.0 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
-% Physical governing equations (EULER, NAVIER_STOKES,
-%                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
-%                               POISSON_EQUATION)
-PHYSICAL_PROBLEM= NAVIER_STOKES
+% Solver type (EULER, NAVIER_STOKES, RANS,
+%                               INC_EULER, INC_NAVIER_STOKES, INC_RANS
+%                               FEM_EULER, FEM_NAVIER_STOKES, FEM_RANS, FEM_LES,
+%                               HEAT_EQUATION_FVM, ELASTICITY)
+SOLVER = RANS
 %
 % Specify turbulence model (NONE, SA, SA_NEG, SST)
 KIND_TURB_MODEL= SST
@@ -36,8 +37,6 @@ KIND_TURB_MODEL= SST
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
 MATH_PROBLEM= DIRECT
 %
-% Regime type (COMPRESSIBLE, INCOMPRESSIBLE)
-REGIME_TYPE= COMPRESSIBLE
 %
 % Axisymmetric simulation, only compressible flows (NO, YES)
 AXISYMMETRIC= NO
@@ -113,9 +112,6 @@ TARGET_CL= 0.80
 %
 % Estimation of dCL/dAlpha (0.2 per degree by default)
 DCL_DALPHA= 0.2
-%
-% Number of times the AoA is updated in a fix CL problem (5 by default)
-UPDATE_ALPHA= 5
 
 % ---------------------- REFERENCE VALUE DEFINITION ---------------------------%
 %
@@ -184,86 +180,94 @@ CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
 KT_CONSTANT= 0.0257
+%
 
-% ------------------------- UNSTEADY SIMULATION -------------------------------%
+% ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
+%
+% Time domain simulation
+TIME_DOMAIN= YES
 %
 % Unsteady simulation (NO, TIME_STEPPING, DUAL_TIME_STEPPING-1ST_ORDER,
 %                      DUAL_TIME_STEPPING-2ND_ORDER, HARMONIC_BALANCE)
-UNSTEADY_SIMULATION= DUAL_TIME_STEPPING-2ND_ORDER
+TIME_MARCHING= DUAL_TIME_STEPPING-2ND_ORDER
 %
 % Time Step for dual time stepping simulations (s) -- Only used when UNST_CFL_NUMBER = 0.0
-UNST_TIMESTEP= 0.001
+% For the DG-FEM solver it is used as a synchronization time when UNST_CFL_NUMBER != 0.0
+TIME_STEP= 0.001
 %
 % Total Physical Time for dual time stepping simulations (s)
-UNST_TIME= 0.005
+MAX_TIME= 0.005
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
 %
-% Number of internal iterations (dual time method)
-UNST_INT_ITER= 200
-%UNST_INT_ITER= 5
-%
-% Iteration number to begin unsteady restarts
-UNST_RESTART_ITER= 0
-
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
-% Dynamic mesh simulation (NO, YES)
-GRID_MOVEMENT= YES
-%
-% Type of dynamic mesh (NONE, RIGID_MOTION, DEFORMING, ROTATING_FRAME,
-%                       MOVING_WALL, STEADY_TRANSLATION, FLUID_STRUCTURE,
-%                       AEROELASTIC, ELASTICITY, EXTERNAL,
-%                       AEROELASTIC_RIGID_MOTION, GUST)
-GRID_MOVEMENT_KIND= FLUID_STRUCTURE
+% Type of dynamic mesh (NONE, RIGID_MOTION, ROTATING_FRAME,
+%                       STEADY_TRANSLATION,
+%                       ELASTICITY, GUST)
+GRID_MOVEMENT= NONE
 %
 % Motion mach number (non-dimensional). Used for initializing a viscous flow
 % with the Reynolds number and for computing force coeffs. with dynamic meshes.
 MACH_MOTION= 0.3
 %
+% Coordinates of the motion origin
+MOTION_ORIGIN= 0.25 0.0 0.0
+%
+% Angular velocity vector (rad/s) about the motion origin
+ROTATION_RATE = 0.0 0.0 0.0
+%
+% Pitching angular freq. (rad/s) about the motion origin
+PITCHING_OMEGA= 0.0 0.0 0.0
+%
+% Pitching amplitude (degrees) about the motion origin
+PITCHING_AMPL= 0.0 0.0 0.0
+%
+% Pitching phase offset (degrees) about the motion origin
+PITCHING_PHASE= 0.0 0.0 0.0
+%
+% Translational velocity (m/s or ft/s) in the x, y, & z directions
+TRANSLATION_RATE = 0.0 0.0 0.0
+%
+% Plunging angular freq. (rad/s) in x, y, & z directions
+PLUNGING_OMEGA= 0.0 0.0 0.0
+%
+% Plunging amplitude (m or ft) in x, y, & z directions
+PLUNGING_AMPL= 0.0 0.0 0.0
+%
+% Type of dynamic surface movement (NONE, DEFORMING, 
+%                       MOVING_WALL, FLUID_STRUCTURE, FLUID_STRUCTURE_STATIC,
+%                       AEROELASTIC, EXTERNAL, EXTERNAL_ROTATION,
+%                       AEROELASTIC_RIGID_MOTION)
+SURFACE_MOVEMENT= FLUID_STRUCTURE
+%
 % Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
 MARKER_MOVING= ( airfoil )
 %
 % Coordinates of the motion origin
-MOTION_ORIGIN_X= 0.25
-MOTION_ORIGIN_Y= 0.0
-MOTION_ORIGIN_Z= 0.0
+SURFACE_MOTION_ORIGIN= (0.25 0.0 0.0)
 %
 % Angular velocity vector (rad/s) about the motion origin
-ROTATION_RATE_X = 0.0
-ROTATION_RATE_Y = 0.0
-ROTATION_RATE_Z = 0.0
+SURFACE_ROTATION_RATE = 0.0 0.0 0.0
 %
 % Pitching angular freq. (rad/s) about the motion origin
-PITCHING_OMEGA_X= 0.0
-PITCHING_OMEGA_Y= 0.0
-PITCHING_OMEGA_Z= 0.0
+SURFACE_PITCHING_OMEGA= 0.0 0.0 0.0
 %
 % Pitching amplitude (degrees) about the motion origin
-PITCHING_AMPL_X= 0.0
-PITCHING_AMPL_Y= 0.0
-PITCHING_AMPL_Z= 0.0
+SURFACE_PITCHING_AMPL= 0.0 0.0 0.0
 %
 % Pitching phase offset (degrees) about the motion origin
-PITCHING_PHASE_X= 0.0
-PITCHING_PHASE_Y= 0.0
-PITCHING_PHASE_Z= 0.0
+SURFACE_PITCHING_PHASE= 0.0 0.0 0.0
 %
-% Translational velocity (m/s) in the x, y, & z directions
-TRANSLATION_RATE_X = 0.0
-TRANSLATION_RATE_Y = 0.0
-TRANSLATION_RATE_Z = 0.0
+% Translational velocity (m/s or ft/s) in the x, y, & z directions
+SURFACE_TRANSLATION_RATE = 0.0 0.0 0.0
 %
 % Plunging angular freq. (rad/s) in x, y, & z directions
-PLUNGING_OMEGA_X= 0.0
-PLUNGING_OMEGA_Y= 0.0
-PLUNGING_OMEGA_Z= 0.0
+SURFACE_PLUNGING_OMEGA= 0.0 0.0 0.0
 %
-% Plunging amplitude (m) in x, y, & z directions
-PLUNGING_AMPL_X= 0.0
-PLUNGING_AMPL_Y= 0.0
-PLUNGING_AMPL_Z= 0.0
+% Plunging amplitude (m or ft) in x, y, & z directions
+SURFACE_PLUNGING_AMPL= 0.0 0.0 0.0
 %
 % Move Motion Origin for marker moving (1 or 0)
 MOVE_MOTION_ORIGIN = 1
@@ -301,8 +305,6 @@ MARKER_INTERNAL= ( NONE )
 % Near-Field boundary marker(s) (NONE = no marker)
 MARKER_NEARFIELD= ( NONE )
 %
-% Zone interface boundary marker(s) (NONE = no marker)
-MARKER_INTERFACE= ( NONE )
 %
 % Inlet boundary type (TOTAL_CONDITIONS, MASS_FLOW)
 INLET_TYPE= TOTAL_CONDITIONS
@@ -583,8 +585,6 @@ CONV_NUM_METHOD_FLOW= JST
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
 %
-% Relaxation coefficient
-RELAXATION_FACTOR_FLOW= 1.0
 
 % -------------------- TURBULENT NUMERICAL METHOD DEFINITION ------------------%
 %
@@ -597,13 +597,18 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
 %
-% Relaxation coefficient
-RELAXATION_FACTOR_TURB= 1.0
 
 % --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
 %
 % Value of the thermal diffusivity
 THERMAL_DIFFUSIVITY= 1.0
+% ---------------- MESH DEFORMATION PARAMETERS (NEW SOLVER) -------------------%
+%
+% Use the reformatted pseudo-elastic solver for grid deformation
+DEFORM_MESH= YES
+%
+% Moving markers which deform the mesh
+MARKER_DEFORM_MESH = ( airfoil )
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
@@ -614,7 +619,7 @@ DEFORM_LINEAR_SOLVER= FGMRES
 DEFORM_LINEAR_SOLVER_PREC= ILU
 %
 % Number of smoothing iterations for mesh deformation
-DEFORM_LINEAR_ITER= 500
+DEFORM_LINEAR_SOLVER_ITER= 500
 %
 % Number of nonlinear deformation iterations (surface deformation increments)
 DEFORM_NONLINEAR_ITER= 3
@@ -643,37 +648,43 @@ VISUALIZE_SURFACE_DEF= NO
 % Visualize the volume deformation (NO, YES)
 VISUALIZE_VOLUME_DEF= NO
 
-% --------------------------- CONVERGENCE PARAMETERS --------------------------%
+% ------------------------------- SOLVER CONTROL ------------------------------%
 %
-% Number of total iterations
-EXT_ITER= 999999
+% Maximum number of inner iterations
+INNER_ITER= 200
+%
+% Maximum number of outer iterations (only for multizone problems)
+OUTER_ITER= 1
+%
+% Maximum number of time iterations
+TIME_ITER= 5
+%
 %
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
 CONV_CRITERIA= CAUCHY
 %
-% Residual reduction (order of magnitude with respect to the initial value)
-RESIDUAL_REDUCTION= 6
-%
 % Min value of the residual (log10 of the residual)
-RESIDUAL_MINVAL= -12
+CONV_RESIDUAL_MINVAL= -12
 %
 % Start convergence criteria at iteration number
-STARTCONV_ITER= 4
+CONV_STARTITER= 4
 %
 % Number of elements to apply the criteria
-CAUCHY_ELEMS= 10
+CONV_CAUCHY_ELEMS= 10
 %
 % Epsilon to control the series convergence
-CAUCHY_EPS= 1E-5
+CONV_CAUCHY_EPS= 1E-5
 %
-% Direct function to apply the convergence criteria (LIFT, DRAG, NEARFIELD_PRESS)
-CAUCHY_FUNC_FLOW= LIFT
+% Convergence field 
+CONV_FIELD= LIFT
 %
-% Adjoint function to apply the convergence criteria (SENS_GEOMETRY, SENS_MACH)
-CAUCHY_FUNC_ADJFLOW= SENS_GEOMETRY
-
-% ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
+% Iteration number to begin unsteady restarts
+RESTART_ITER= 0
+%% ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
+%
+% Screen output fields (use 'SU2_CFD -d <config_file>' to view list of available fields)
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_ENERGY, LIFT, DRAG)
 %
 % Mesh input file
 MESH_FILENAME= ../../tests/SU2_RBM/models/PitchPlungeAirfoil_BGS_parallel_fluidMesh.su2
@@ -685,14 +696,13 @@ MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
 %
 % Restart flow input file
-SOLUTION_FLOW_FILENAME= restart_flow.dat
+SOLUTION_FILENAME= restart_flow.dat
 %
 % Restart adjoint input file
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
-% Output file format (TECPLOT, TECPLOT_BINARY, PARAVIEW,
-%                     FIELDVIEW, FIELDVIEW_BINARY)
-OUTPUT_FORMAT= TECPLOT_BINARY
+% Output tabular file format (TECPLOT, CSV)
+TABULAR_FORMAT= TECPLOT
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
@@ -701,13 +711,13 @@ CONV_FILENAME= history
 BREAKDOWN_FILENAME= forces_breakdown.dat
 %
 % Output file restart flow
-RESTART_FLOW_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flow.dat
 %
 % Output file restart adjoint
 RESTART_ADJ_FILENAME= restart_adj.dat
 %
 % Output file flow (w/o extension) variables
-VOLUME_FLOW_FILENAME= flow
+VOLUME_FILENAME= flow
 %
 % Output file adjoint (w/o extension) variables
 VOLUME_ADJ_FILENAME= adjoint
@@ -719,7 +729,7 @@ VALUE_OBJFUNC_FILENAME= of_eval.dat
 GRAD_OBJFUNC_FILENAME= of_grad.dat
 %
 % Output file surface flow coefficient (w/o extension)
-SURFACE_FLOW_FILENAME= surface_flow
+SURFACE_FILENAME= surface_flow
 %
 % Output file surface adjoint coefficient (w/o extension)
 SURFACE_ADJ_FILENAME= surface_adjoint
@@ -747,12 +757,6 @@ WRT_SHARPEDGES= NO
 %
 % Output the solution at each surface in the history file
 WRT_SURFACE= NO
-%
-% Minimize the required output memory
-LOW_MEMORY_OUTPUT= NO
-%
-% Verbosity of console output: NONE removes minor MPI overhead (NONE, HIGH)
-CONSOLE_OUTPUT_VERBOSITY= HIGH
 %
 % Write binary restart files (YES, NO)
 WRT_BINARY_RESTART= YES
