--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -678,7 +678,10 @@ RESTART_ITER= 0
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 % Screen output fields (use 'SU2_CFD -d <config_file>' to view list of available fields)
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_ENERGY, LIFT, DRAG)
+SCREEN_OUTPUT= (INNER_ITER, RMS_RES, LIFT, DRAG)
+%
+% History output groups (use 'SU2_CFD -d <config_file>' to view list of available fields)
+HISTORY_OUTPUT= (ITER, RMS_RES, AERO_COEFF)
 %
 % Mesh input file
 MESH_FILENAME= ../../tests/SU2_RBM/models/PitchPlungeN0012_fluid_mesh.su2
