Remove markers new SU2. Fix lacking moving marker

--- a/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
@@ -34,6 +34,14 @@ SOLVER = RANS
 % Specify turbulence model (NONE, SA, SA_NEG, SST)
 KIND_TURB_MODEL= SST
 %
+% Specify the verification solution(NO_VERIFICATION_SOLUTION, INVISCID_VORTEX,
+%                                   RINGLEB, NS_UNIT_QUAD, TAYLOR_GREEN_VORTEX,
+%                                   MMS_NS_UNIT_QUAD, MMS_NS_UNIT_QUAD_WALL_BC,
+%                                   MMS_NS_TWO_HALF_CIRCLES, MMS_NS_TWO_HALF_SPHERES,
+%                                   MMS_INC_EULER, MMS_INC_NS, INC_TAYLOR_GREEN_VORTEX,
+%                                   USER_DEFINED_SOLUTION)
+KIND_VERIFICATION_SOLUTION= NO_VERIFICATION_SOLUTION
+%
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT, DISCRETE_ADJOINT)
 MATH_PROBLEM= DIRECT
 %
@@ -196,7 +204,7 @@ TIME_MARCHING= DUAL_TIME_STEPPING-2ND_ORDER
 TIME_STEP= 0.001
 %
 % Total Physical Time for dual time stepping simulations (s)
-MAX_TIME= 0.005
+MAX_TIME= 0.0051
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
@@ -270,7 +278,7 @@ SURFACE_PLUNGING_OMEGA= 0.0 0.0 0.0
 SURFACE_PLUNGING_AMPL= 0.0 0.0 0.0
 %
 % Move Motion Origin for marker moving (1 or 0)
-MOVE_MOTION_ORIGIN = 1
+MOVE_MOTION_ORIGIN = 0
 
 % ----------------------- BODY FORCE DEFINITION -------------------------------%
 %
@@ -574,7 +582,7 @@ CONV_NUM_METHOD_FLOW= JST
 %
 % Entropy fix coefficient (0.0 implies no entropy fixing, 1.0 implies scalar
 %                          artificial dissipation)
-%ENTROPY_FIX_COEFF= 0.001
+ENTROPY_FIX_COEFF= 0.001
 %
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT, EULER_EXPLICIT)
 TIME_DISCRE_FLOW= EULER_IMPLICIT
@@ -674,7 +682,7 @@ CONV_CAUCHY_EPS= 1E-5
 CONV_FIELD= LIFT
 %
 % Iteration number to begin unsteady restarts
-RESTART_ITER= 0
+RESTART_ITER= 2
 %% ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
 % Screen output fields (use 'SU2_CFD -d <config_file>' to view list of available fields)
