--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -242,34 +242,34 @@ PLUNGING_AMPL= 0.0 0.0 0.0
 SURFACE_MOVEMENT= FLUID_STRUCTURE
 %
 % Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
-MARKER_MOVING= ( airfoil )
+MARKER_MOVING= ( airfoil, airfoil_ )
 %
 % Coordinates of the motion origin
-SURFACE_MOTION_ORIGIN= (0.25 0.0 0.0)
+SURFACE_MOTION_ORIGIN= (0.25 0.0 0.0 0.25 0.0 0.0)
 %
 % Angular velocity vector (rad/s) about the motion origin
-SURFACE_ROTATION_RATE = 0.0 0.0 0.0
+SURFACE_ROTATION_RATE = 0.0 0.0 0.0 0.0 0.0 0.0
 %
 % Pitching angular freq. (rad/s) about the motion origin
-SURFACE_PITCHING_OMEGA= 0.0 0.0 0.0
+SURFACE_PITCHING_OMEGA= 0.0 0.0 0.0 0.0 0.0 0.0
 %
 % Pitching amplitude (degrees) about the motion origin
-SURFACE_PITCHING_AMPL= 0.0 0.0 0.0
+SURFACE_PITCHING_AMPL= 0.0 0.0 0.0 0.0 0.0 0.0
 %
 % Pitching phase offset (degrees) about the motion origin
-SURFACE_PITCHING_PHASE= 0.0 0.0 0.0
+SURFACE_PITCHING_PHASE= 0.0 0.0 0.0 0.0 0.0 0.0
 %
 % Translational velocity (m/s or ft/s) in the x, y, & z directions
-SURFACE_TRANSLATION_RATE = 0.0 0.0 0.0
+SURFACE_TRANSLATION_RATE = 0.0 0.0 0.0 0.0 0.0 0.0
 %
 % Plunging angular freq. (rad/s) in x, y, & z directions
-SURFACE_PLUNGING_OMEGA= 0.0 0.0 0.0
+SURFACE_PLUNGING_OMEGA= 0.0 0.0 0.0 0.0 0.0 0.0
 %
 % Plunging amplitude (m or ft) in x, y, & z directions
-SURFACE_PLUNGING_AMPL= 0.0 0.0 0.0
+SURFACE_PLUNGING_AMPL= 0.0 0.0 0.0 0.0 0.0 0.0
 %
 % Move Motion Origin for marker moving (1 or 0)
-MOVE_MOTION_ORIGIN = 1
+MOVE_MOTION_ORIGIN = 1 1
 
 % ----------------------- BODY FORCE DEFINITION -------------------------------%
 %
@@ -371,12 +371,6 @@ MARKER_NORMAL_DISPL= ( NONE )
 % Pressure boundary marker(s) (NONE = no marker)
 % Format: ( pressure marker )
 MARKER_PRESSURE= ( NONE )
-%
-% Neumann bounday marker(s) (NONE = no marker)
-MARKER_NEUMANN= ( NONE )
-%
-% Dirichlet boundary marker(s) (NONE = no marker)
-MARKER_DIRICHLET= ( NONE )
 %
 % Riemann boundary marker(s) (NONE = no marker)
 % Format: (marker, data kind flag, list of data)
@@ -678,7 +672,7 @@ RESTART_ITER= 0
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 % Screen output fields (use 'SU2_CFD -d <config_file>' to view list of available fields)
-SCREEN_OUTPUT= (INNER_ITER, RMS_RES, LIFT, DRAG)
+SCREEN_OUTPUT= (INNER_ITER, TIME_ITER, CAUCHY_LIFT, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_ENERGY, LIFT, DRAG)
 %
 % History output groups (use 'SU2_CFD -d <config_file>' to view list of available fields)
 HISTORY_OUTPUT= (ITER, RMS_RES, AERO_COEFF)
