Remove marker `wake`

--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -299,7 +299,7 @@ MARKER_FAR= ( upstream, side, downstream, downstream_)
 MARKER_SYM= ( NONE )
 %
 % Internal boundary marker(s) e.g. no boundary condition (NONE = no marker)
-MARKER_INTERNAL= ( wake )
+MARKER_INTERNAL= ( NONE )
 %
 % Near-Field boundary marker(s) (NONE = no marker)
 MARKER_NEARFIELD= ( NONE )
@@ -598,7 +598,7 @@ THERMAL_DIFFUSIVITY= 1.0
 DEFORM_MESH= YES
 %
 % Moving markers which deform the mesh
-MARKER_DEFORM_MESH = ( airfoil )
+MARKER_DEFORM_MESH = ( airfoil, airfoil_ )
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
