Added monitoring markers

--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -407,10 +407,10 @@ KIND_INTERPOLATION= NEAREST_NEIGHBOR
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
 % Marker(s) of the surface in the surface flow solution file
-MARKER_PLOTTING = ( airfoil )
+MARKER_PLOTTING = ( airfoil, airfoil_ )
 %
 % Marker(s) of the surface where the non-dimensional coefficients are evaluated.
-MARKER_MONITORING = ( airfoil )
+MARKER_MONITORING = ( airfoil, airfoil_ )
 %
 % Marker(s) of the surface where obj. func. (design problem) will be evaluated
 MARKER_DESIGNING = ( NONE )
