Adding SU2+SU2 test to CMakeLists

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,5 +9,6 @@ IF(NOT WIN32)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_SU2)
 ENDIF()
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/VLM_Metafor)
