`futurize` PFEM, update for adj, update 1 SU2 cfg tests

--- a/tests/SU2_Modal/staticAgard_fluid.cfg
+++ b/tests/SU2_Modal/staticAgard_fluid.cfg
@@ -178,21 +178,21 @@ UNST_RESTART_ITER= 0
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 % Motion mach number (non-dimensional). Used for initializing a viscous flow
 % with the Reynolds number and for computing force coeffs. with dynamic meshes.
-MACH_MOTION= 0.8
+%MACH_MOTION= 0.8
 %
 % Type of dynamic surface movement (NONE, DEFORMING, 
 %                       MOVING_WALL, FLUID_STRUCTURE, FLUID_STRUCTURE_STATIC,
 %                       AEROELASTIC, EXTERNAL, EXTERNAL_ROTATION,
 %                       AEROELASTIC_RIGID_MOTION)
-SURFACE_MOVEMENT = FLUID_STRUCTURE_STATIC
+%SURFACE_MOVEMENT = EXTERNAL
 %
 % Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
-MARKER_MOVING= ( airfoil )
+%MARKER_MOVING= ( airfoil )
 %
 % Coordinates of the motion origin
-SURFACE_MOTION_ORIGIN= 0.25 0.0 0.0
+%SURFACE_MOTION_ORIGIN= 0.25 0.0 0.0
 % Move Motion Origin for marker moving (1 or 0)
-MOVE_MOTION_ORIGIN = 1
+%MOVE_MOTION_ORIGIN = 1
 
 % ----------------------- BODY FORCE DEFINITION -------------------------------%
 %
@@ -421,6 +421,8 @@ DEFORM_MESH= YES
 % Moving markers which deform the mesh
 MARKER_DEFORM_MESH = ( airfoil )
 
+MARKER_FLUID_LOAD = ( airfoil )
+
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
 % Linear solver or smoother for implicit formulations (FGMRES, RESTARTED_FGMRES, BCGSTAB)
@@ -480,6 +482,13 @@ CONV_STARTITER= 5
 SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_MOMENTUM-X, RMS_MOMENTUM-Y, RMS_ENERGY, LIFT, DRAG)
 % Mesh input file
 MESH_FILENAME= ../../tests/SU2_Modal/models/agard_fluid.su2
+%
+% Files to output 
+% Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
+%  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
+%  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
+% default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
+OUTPUT_FILES= (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 %
 % Mesh input file format (SU2, CGNS)
 MESH_FORMAT= SU2
