Number of unsteady iterations

--- a/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
@@ -618,7 +618,7 @@ VISUALIZE_VOLUME_DEF= NO
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
 % Number of total iterations
-OUTER_ITER = 999999
+TIME_ITER = 999999
 %
 % Convergence criteria (CAUCHY, RESIDUAL)
 %
