Changes to test SU2 cfg files: fluid load

--- a/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
@@ -611,6 +611,8 @@ DEFORM_MESH= YES
 %
 % Moving markers which deform the mesh
 MARKER_DEFORM_MESH = ( airfoil )
+%
+MARKER_FLUID_LOAD = ( airfoil )
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
