--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -599,6 +599,8 @@ DEFORM_MESH= YES
 %
 % Moving markers which deform the mesh
 MARKER_DEFORM_MESH = ( airfoil, airfoil_ )
+%
+MARKER_FLUID_LOAD = ( airfoil )
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
