SU2 self-case add surface file

--- a/tests/SU2_SU2/config_cantilever.cfg
+++ b/tests/SU2_SU2/config_cantilever.cfg
@@ -74,10 +74,13 @@ SCREEN_WRT_FREQ_INNER = 1
 % OUTPUT
 %%%%%%%%%%%%%%%%%%%%%%%
 
-OUTPUT_FILES = (RESTART, PARAVIEW)
+MARKER_PLOTTING = ( feabound )
+
+OUTPUT_FILES = (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 SOLUTION_FILENAME = solution_solid_steady
 RESTART_FILENAME = restart_solid_steady
 VOLUME_FILENAME = solid_steady
+SURFACE_FILENAME = surface_solid
 
 HISTORY_OUTPUT = ITER, RMS_RES
 CONV_FILENAME= history_solid
