Add pyBeam tests in CMakeLists

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -8,6 +8,7 @@ MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM_Metafor)
 IF(NOT WIN32)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_pyBeam)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_SU2)
 ENDIF()
