--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# Copyright 2018 University of Liège
+# Copyright 2021 University of Liège
 # 
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -14,75 +14,99 @@
 
 # Main CMake file.
 # Configure the compilation of the C++ core of CUPyDO and the Py wrapper.
-#
-# Authors : D. THOMAS.
 
 CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
 PROJECT(CUPyDO)
 
-LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")
+SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "")
+SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin CACHE PATH "")
+MARK_AS_ADVANCED(LIBRARY_OUTPUT_PATH EXECUTABLE_OUTPUT_PATH)
 
-# macros/fcts
-INCLUDE(cupyMacros)
-
-# Type of build
-IF( NOT CMAKE_BUILD_TYPE )
-    SET( CMAKE_BUILD_TYPE Release CACHE STRING "" FORCE )
+IF(NOT CMAKE_BUILD_TYPE)
+    SET( CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
 ENDIF()
-MESSAGE(STATUS "Build type : ${CMAKE_BUILD_TYPE}")
+
+LIST(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/CMake")
 
 # Options
 OPTION(WITH_MPI "Build for parallel run" OFF)
 
+# macros/fcts
+INCLUDE(cupyMacros)
+
 # -- C++11
-SET(CMAKE_CXX_STANDARD 11) # newer way to set C++11 (requires cmake>=3.1)
+SET(CMAKE_CXX_STANDARD 11)
 SET(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Add warnings during compilation when build type is Debug
-IF(CMAKE_BUILD_TYPE MATCHES Debug)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")
+# Set specific compiler flags
+MESSAGE(STATUS "CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID}")
+IF(CMAKE_CXX_COMPILER_ID MATCHES "GNU" AND CMAKE_BUILD_TYPE MATCHES Debug)
+    # Add warnings during compilation when build type is Debug
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall - Wextra")
 ENDIF()
+
+# -- Search for Python
+IF (CMAKE_VERSION VERSION_LESS 3.12.0)
+    FIND_PACKAGE(PythonInterp 3.6 REQUIRED)
+    FIND_PACKAGE(PythonLibs 3.6 REQUIRED)
+ELSE()
+    find_package (Python3 COMPONENTS Interpreter Development)
+    # use Python3_ROOT_DIR if wrong python found (e.g. anaconda)
+    SET(PYTHON_EXECUTABLE ${Python3_EXECUTABLE})
+    SET(PYTHON_LIBRARIES ${Python3_LIBRARIES})
+    SET(PYTHON_INCLUDE_PATH ${Python3_INCLUDE_DIRS}) 
+    SET(PYTHONLIBS_VERSION_STRING ${Python3_VERSION})     
+ENDIF()
+MESSAGE(STATUS "PYTHON_EXECUTABLE:FILEPATH=${PYTHON_EXECUTABLE}")
+MESSAGE(STATUS "PYTHON_LIBRARIES:FILEPATH=${PYTHON_LIBRARIES}")
+MESSAGE(STATUS "PYTHON_INCLUDE_PATH:FILEPATH=${PYTHON_INCLUDE_PATH}")
+MESSAGE(STATUS "PYTHON_FRAMEWORK_INCLUDES=${PYTHON_FRAMEWORK_INCLUDES}")
+MESSAGE(STATUS "PYTHONLIBS_VERSION_STRING=${PYTHONLIBS_VERSION_STRING}")
+MESSAGE(STATUS "Python_FRAMEWORKS=${Python_FRAMEWORKS}")
+INCLUDE_DIRECTORIES( ${PYTHON_INCLUDE_PATH} )
+
+# numpy
+FIND_PACKAGE(NUMPY REQUIRED)
+INCLUDE_DIRECTORIES( ${NUMPY_INCLUDE_DIR} )
+
+# -- Search for SWIG
+FIND_PACKAGE(SWIG REQUIRED)
+IF(CMAKE_GENERATOR MATCHES "Visual Studio")
+    # SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}/$(Configuration)/") # INSTALL does not work
+    SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}")
+ELSE()
+    SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}")
+ENDIF()
+MESSAGE(STATUS "CMAKE_SWIG_OUTDIR=${CMAKE_SWIG_OUTDIR}")
 
 # Build for parallel run using MPI (default is OFF)
 IF(WITH_MPI)
     FIND_PACKAGE(MPI REQUIRED)
-    IF(MPI_FOUND)
-        MESSAGE(STATUS "MPI_INCLUDE_PATH=${MPI_INCLUDE_PATH}")
-        MESSAGE(STATUS "MPI_LIBRARIES=${MPI_LIBRARIES}")
-        ADD_DEFINITIONS(-DHAVE_MPI)
-        FIND_PACKAGE(PETSc REQUIRED)
-    ENDIF(MPI_FOUND)
-ENDIF(WITH_MPI)
+    MESSAGE(STATUS "MPI_INCLUDE_PATH=${MPI_INCLUDE_PATH}")
+    MESSAGE(STATUS "MPI_LIBRARIES=${MPI_LIBRARIES}")
+    ADD_DEFINITIONS(-DHAVE_MPI)
+    MESSAGE(STATUS "MPI_INCLUDE_PATH=${MPI_INCLUDE_PATH}")
+    INCLUDE_DIRECTORIES( ${MPI_INCLUDE_PATH} )
 
-# Python/SWIG
-FIND_PACKAGE(PythonInterp 3 REQUIRED)
-FIND_PACKAGE(PythonLibs 3 REQUIRED)
-MESSAGE(STATUS "PYTHONINTERP_FOUND=${PYTHONINTERP_FOUND}")
-MESSAGE(STATUS "PYTHON_EXECUTABLE=${PYTHON_EXECUTABLE}")
-MESSAGE(STATUS "PYTHONLIBS_FOUND=${PYTHONLIBS_FOUND}")
-MESSAGE(STATUS "PYTHON_LIBRARIES=${PYTHON_LIBRARIES}")
-MESSAGE(STATUS "PYTHON_INCLUDE_PATH=${PYTHON_INCLUDE_PATH}")
-FIND_PACKAGE(NUMPY REQUIRED)
-FIND_PACKAGE(SWIG REQUIRED)
-SET(CMAKE_SWIG_OUTDIR "${EXECUTABLE_OUTPUT_PATH}")
-MESSAGE(STATUS "SWIG_EXECUTABLE=${SWIG_EXECUTABLE}")
-IF(WITH_MPI)
+    FIND_PACKAGE(PETSc REQUIRED)
+    MESSAGE(STATUS "PETSC_INCLUDE_PATH=${PETSC_INCLUDE_PATH}")
+    INCLUDE_DIRECTORIES( ${PETSC_INCLUDE_PATH} )
+
     FIND_PACKAGE(PETSc4Py REQUIRED)
-    FIND_PACKAGE(Mpi4Py REQUIRED)
-ENDIF(WITH_MPI)
+    MESSAGE(STATUS "PETSC4PY_INCLUDE_DIR=${PETSC4PY_INCLUDE_DIR}")
+    INCLUDE_DIRECTORIES( ${PETSC4PY_INCLUDE_DIR} )
 
-INCLUDE_DIRECTORIES( ${MPI_INCLUDE_PATH} ${PETSC_INCLUDE_PATH} )
+    FIND_PACKAGE(Mpi4Py REQUIRED)
+    MESSAGE(STATUS "MPI4PY_INCLUDE_DIR=${MPI4PY_INCLUDE_DIR}")
+    INCLUDE_DIRECTORIES( ${MPI4PY_INCLUDE_DIR} )
+ENDIF(WITH_MPI)
 
 SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 
 #-------------------------------------------------------------
 INCLUDE(${SWIG_USE_FILE})
 
-INCLUDE_DIRECTORIES(  ${PROJECT_SOURCE_DIR}/src 
-                      ${PYTHON_INCLUDE_PATH} 
-                      ${NUMPY_INCLUDE_DIR} 
-                      ${PETSC4PY_INCLUDE_DIR} 
-                      ${MPI4PY_INCLUDE_DIR})
+INCLUDE_DIRECTORIES( ${PROJECT_SOURCE_DIR}/src )
 
 FILE(GLOB SRCS src/*.h src/*.cpp)
 
@@ -90,9 +114,9 @@ FILE(GLOB ISRCS _src/*.i)
 
 IF(WITH_MPI)
     SET(CMAKE_SWIG_FLAGS "-DHAVE_MPI")
-ELSE(WITH_MPI)
+ELSE()
     SET(CMAKE_SWIG_FLAGS "")
-ENDIF(WITH_MPI)
+ENDIF()
 
 SET_SOURCE_FILES_PROPERTIES(${ISRCS} PROPERTIES CPLUSPLUS ON)
 
@@ -111,11 +135,12 @@ ENDIF()
 SWIG_LINK_LIBRARIES(CCupydo ${PYTHON_LIBRARIES} ${MPI_LIBRARIES} ${PETSC_LIBRARIES})
 
 # --- Install ---
+# note: [RB] this is not how INSTALL is supposed to be used!
 SET(CMAKE_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}")
 MESSAGE(STATUS "Installation directory : ${CMAKE_INSTALL_PREFIX}")
 
 INSTALL_TARGETS(/ccupydo _CCupydo)
-INSTALL_FILES(/ccupydo FILES "${PROJECT_BINARY_DIR}/CCupydo.py")
+INSTALL_FILES(/ccupydo FILES "${CMAKE_SWIG_OUTDIR}/CCupydo.py")
 
 # --- Enable CTest ---
 ENABLE_TESTING()
