Fix NMM IQN test in 2D

--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -242,34 +242,34 @@ PLUNGING_AMPL= 0.0 0.0 0.0
 SURFACE_MOVEMENT= FLUID_STRUCTURE
 %
 % Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
-MARKER_MOVING= ( airfoil, airfoil_ )
+MARKER_MOVING= ( airfoil )
 %
 % Coordinates of the motion origin
-SURFACE_MOTION_ORIGIN= (0.25 0.0 0.0 0.25 0.0 0.0)
+SURFACE_MOTION_ORIGIN= (0.25 0.0 0.0)
 %
 % Angular velocity vector (rad/s) about the motion origin
-SURFACE_ROTATION_RATE = 0.0 0.0 0.0 0.0 0.0 0.0
+SURFACE_ROTATION_RATE = 0.0 0.0 0.0
 %
 % Pitching angular freq. (rad/s) about the motion origin
-SURFACE_PITCHING_OMEGA= 0.0 0.0 0.0 0.0 0.0 0.0
+SURFACE_PITCHING_OMEGA= 0.0 0.0 0.0
 %
 % Pitching amplitude (degrees) about the motion origin
-SURFACE_PITCHING_AMPL= 0.0 0.0 0.0 0.0 0.0 0.0
+SURFACE_PITCHING_AMPL= 0.0 0.0 0.0
 %
 % Pitching phase offset (degrees) about the motion origin
-SURFACE_PITCHING_PHASE= 0.0 0.0 0.0 0.0 0.0 0.0
+SURFACE_PITCHING_PHASE= 0.0 0.0 0.0
 %
 % Translational velocity (m/s or ft/s) in the x, y, & z directions
-SURFACE_TRANSLATION_RATE = 0.0 0.0 0.0 0.0 0.0 0.0
+SURFACE_TRANSLATION_RATE = 0.0 0.0 0.0
 %
 % Plunging angular freq. (rad/s) in x, y, & z directions
-SURFACE_PLUNGING_OMEGA= 0.0 0.0 0.0 0.0 0.0 0.0
+SURFACE_PLUNGING_OMEGA= 0.0 0.0 0.0
 %
 % Plunging amplitude (m or ft) in x, y, & z directions
-SURFACE_PLUNGING_AMPL= 0.0 0.0 0.0 0.0 0.0 0.0
+SURFACE_PLUNGING_AMPL= 0.0 0.0 0.0 0.0
 %
 % Move Motion Origin for marker moving (1 or 0)
-MOVE_MOTION_ORIGIN = 1 1
+MOVE_MOTION_ORIGIN = 1
 
 % ----------------------- BODY FORCE DEFINITION -------------------------------%
 %
@@ -286,14 +286,14 @@ MARKER_EULER= ( NONE )
 %
 % Navier-Stokes (no-slip), constant heat flux wall  marker(s) (NONE = no marker)
 % Format: ( marker name, constant heat flux (J/m^2), ... )
-MARKER_HEATFLUX= ( airfoil, 0.0, airfoil_, 0.0 )
+MARKER_HEATFLUX= ( airfoil, 0.0 )
 %
 % Navier-Stokes (no-slip), isothermal wall marker(s) (NONE = no marker)
 % Format: ( marker name, constant wall temperature (K), ... )
 MARKER_ISOTHERMAL= ( NONE )
 %
 % Far-field boundary marker(s) (NONE = no marker)
-MARKER_FAR= ( upstream, side, downstream, downstream_)
+MARKER_FAR= ( farfield )
 %
 % Symmetry boundary marker(s) (NONE = no marker)
 MARKER_SYM= ( NONE )
@@ -407,10 +407,10 @@ KIND_INTERPOLATION= NEAREST_NEIGHBOR
 % ------------------------ SURFACES IDENTIFICATION ----------------------------%
 %
 % Marker(s) of the surface in the surface flow solution file
-MARKER_PLOTTING = ( airfoil, airfoil_ )
+MARKER_PLOTTING = ( airfoil )
 %
 % Marker(s) of the surface where the non-dimensional coefficients are evaluated.
-MARKER_MONITORING = ( airfoil, airfoil_ )
+MARKER_MONITORING = ( airfoil )
 %
 % Marker(s) of the surface where obj. func. (design problem) will be evaluated
 MARKER_DESIGNING = ( NONE )
@@ -598,7 +598,7 @@ THERMAL_DIFFUSIVITY= 1.0
 DEFORM_MESH= YES
 %
 % Moving markers which deform the mesh
-MARKER_DEFORM_MESH = ( airfoil, airfoil_ )
+MARKER_DEFORM_MESH = ( airfoil )
 %
 MARKER_FLUID_LOAD = ( airfoil )
 
