Fix problem in iteration number (agard, SU2+Mtf)

--- a/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
+++ b/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
@@ -201,7 +201,7 @@ UNST_CFL_NUMBER= 0.0
 %
 % Number of internal iterations (dual time method)
 %UNST_INT_ITER= 50
-INNER_ITER = 5
+INNER_ITER = 100
 %
 % Iteration number to begin unsteady restarts
 UNST_RESTART_ITER= 0
@@ -664,7 +664,7 @@ TABULAR_FORMAT = TECPLOT
 %  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
 %  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
 % default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
-OUTPUT_FILES = (RESTART, TECPLOT, SURFACE_TECPLOT)
+OUTPUT_FILES = (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
