Update SU2 config files

--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -19,7 +19,7 @@
 % Author: ___________________________________________________________________  %
 % Institution: ______________________________________________________________  %
 % Date: __________                                                             %
-% File Version 7.0.0 "Blackbird"                                               %
+% File Version 7.1.1 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -239,7 +239,7 @@ PLUNGING_AMPL= 0.0 0.0 0.0
 %                       MOVING_WALL, FLUID_STRUCTURE, FLUID_STRUCTURE_STATIC,
 %                       AEROELASTIC, EXTERNAL, EXTERNAL_ROTATION,
 %                       AEROELASTIC_RIGID_MOTION)
-SURFACE_MOVEMENT= FLUID_STRUCTURE
+SURFACE_MOVEMENT= DEFORMING
 %
 % Moving wall boundary marker(s) (NONE = no marker, ignored for RIGID_MOTION)
 MARKER_MOVING= ( airfoil )
@@ -634,9 +634,6 @@ DEFORM_STIFFNESS_TYPE= WALL_DISTANCE
 % of the volumetric grid is going to be deformed in meters or inches (1E6 by default)
 DEFORM_LIMIT = 1E6
 %
-% Visualize the surface deformation (NO, YES)
-VISUALIZE_SURFACE_DEF= NO
-%
 % ------------------------------- SOLVER CONTROL ------------------------------%
 %
 % Maximum number of inner iterations
@@ -727,32 +724,8 @@ SURFACE_FILENAME= surface_flow
 % Output file surface adjoint coefficient (w/o extension)
 SURFACE_ADJ_FILENAME= surface_adjoint
 %
-% Writing solution file frequency
-WRT_SOL_FREQ= 100
-%
-% Writing solution file frequency for physical time steps (dual time)
-WRT_SOL_FREQ_DUALTIME= 1000
-%
 % Writing convergence history frequency
-WRT_CON_FREQ= 1
-%
-% Writing convergence history frequency (dual time, only written to screen)
-WRT_CON_FREQ_DUALTIME= 1
-%
-% Output residual values in the solution files
-WRT_RESIDUALS= NO
-%
-% Output limiters values in the solution files
-WRT_LIMITERS= NO
-%
-% Output the sharp edges detector
-WRT_SHARPEDGES= NO
-%
-% Output the solution at each surface in the history file
-WRT_SURFACE= NO
-%
-% Write binary restart files (YES, NO)
-WRT_BINARY_RESTART= YES
+OUTPUT_WRT_FREQ= 100
 %
 % Read binary restart files (YES, NO)
 READ_BINARY_RESTART= YES
