--- a/tests/SU2_Modal/staticAgard_fluid.cfg
+++ b/tests/SU2_Modal/staticAgard_fluid.cfg
@@ -19,7 +19,7 @@
 % Author: ___________________________________________________________________  %
 % Institution: ______________________________________________________________  %
 % Date: __________                                                             %
-% File Version 7.0.0 "Blackbird"                                               %
+% File Version 7.1.1 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -454,12 +454,6 @@ DEFORM_STIFFNESS_TYPE= WALL_DISTANCE
 % Deform the grid only close to the surface. It is possible to specify how much
 % of the volumetric grid is going to be deformed in meters or inches (1E6 by default)
 DEFORM_LIMIT = 0.3
-%
-% Visualize the surface deformation (NO, YES)
-VISUALIZE_SURFACE_DEF= NO
-%
-% Visualize the volume deformation (NO, YES)
-VISUALIZE_VOLUME_DEF= NO
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
@@ -536,31 +530,10 @@ SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 %
 % Writing solution file frequency
-WRT_SOL_FREQ= 200
-%
-% Writing solution file frequency for physical time steps (dual time)
-WRT_SOL_FREQ_DUALTIME= 1
+OUTPUT_WRT_FREQ= 200
 %
 % Writing convergence history frequency
-WRT_CON_FREQ= 1
-%
-% Writing convergence history frequency (dual time, only written to screen)
-WRT_CON_FREQ_DUALTIME= 1
-%
-% Output residual values in the solution files
-WRT_RESIDUALS= NO
-%
-% Output limiters values in the solution files
-WRT_LIMITERS= NO
-%
-% Output the sharp edges detector
-WRT_SHARPEDGES= NO
-%
-% Output the solution at each surface in the history file
-WRT_SURFACE= NO
-%
-% Write binary restart files (YES, NO)
-WRT_BINARY_RESTART= YES
+SCREEN_WRT_FREQ_INNER= 1
 %
 % Read binary restart files (YES, NO)
 READ_BINARY_RESTART= YES
