Test cases: add rigid top, default solver
SU2 default solver is adjoint for AD-enabled solver.
Added rigid elements at the top of the pyBeam beam

--- a/tests/SU2_SU2/config_cantilever.cfg
+++ b/tests/SU2_SU2/config_cantilever.cfg
@@ -12,6 +12,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%   
           
 SOLVER = ELASTICITY
+MATH_PROBLEM = DIRECT
 
 %%%%%%%%%%%%%%%%%%%%%%%
 % STRUCTURAL PROPERTIES
