PFEM3D support, Metafor Exporter, dtWrite (time between result save), Compatibility for more recent versions of current solvers (SU2, Flow, Metafor, ...)

--- a/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
@@ -179,7 +179,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-KT_CONSTANT= 0.0257
+THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
 
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
@@ -204,7 +204,7 @@ INNER_ITER = 200
 %UNST_INT_ITER= 5
 %
 % Iteration number to begin unsteady restarts
-UNST_RESTART_ITER= 0
+RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
@@ -571,11 +571,6 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 %
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
-
-% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
-%
-% Value of the thermal diffusivity
-THERMAL_DIFFUSIVITY= 1.0
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
