--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,15 +1,14 @@
 # Add tests
-IF(NOT WIN32) # temporarily disabled on Windows
-    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_RBM)
-ENDIF()
+
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Modal)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM3D_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/VLM_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
+MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
 IF(NOT WIN32)
-    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
-    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/Flow_RBM)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_pyBeam)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
-    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_SU2)
 ENDIF()
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/VLM_Metafor)
