PFEM3D-Metafor Battery, Json Paths, Formatting

--- a/tests/SU2_Modal/staticAgard_fluid.cfg
+++ b/tests/SU2_Modal/staticAgard_fluid.cfg
@@ -156,7 +156,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
+KT_CONSTANT= 0.0257
 
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
 %
@@ -173,7 +173,7 @@ MAX_TIME= 60.0
 UNST_CFL_NUMBER= 0.0
 %
 % Iteration number to begin unsteady restarts
-RESTART_ITER= 0
+UNST_RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 % Motion mach number (non-dimensional). Used for initializing a viscous flow
@@ -409,6 +409,10 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 CFL_REDUCTION_TURB= 1.0
 %
 
+% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
+%
+% Value of the thermal diffusivity
+THERMAL_DIFFUSIVITY= 1.0
 % ---------------- MESH DEFORMATION PARAMETERS (NEW SOLVER) -------------------%
 %
 % Use the reformatted pseudo-elastic solver for grid deformation
@@ -455,6 +459,10 @@ DEFORM_LIMIT = 0.3
 %
 % Number of internal iterations
 INNER_ITER= 50
+%
+% Convergence criteria (CAUCHY, RESIDUAL)
+%
+CONV_CRITERIA= RESIDUAL
 %
 % Min value of the residual (log10 of the residual)
 CONV_RESIDUAL_MINVAL= -10
