--- a/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
+++ b/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
@@ -179,7 +179,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
+KT_CONSTANT= 0.0257
 
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
@@ -204,7 +204,7 @@ UNST_CFL_NUMBER= 0.0
 INNER_ITER = 100
 %
 % Iteration number to begin unsteady restarts
-RESTART_ITER= 0
+UNST_RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
@@ -572,6 +572,11 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
 
+% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
+%
+% Value of the thermal diffusivity
+THERMAL_DIFFUSIVITY= 1.0
+
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
 % Linear solver or smoother for implicit formulations (FGMRES, RESTARTED_FGMRES, BCGSTAB)
@@ -608,6 +613,10 @@ DEFORM_LIMIT = 0.3
 %
 % Number of total iterations
 OUTER_ITER= 100
+%
+% Convergence criteria (CAUCHY, RESIDUAL)
+%
+CONV_CRITERIA= RESIDUAL
 %
 % Min value of the residual (log10 of the residual)
 CONV_RESIDUAL_MINVAL = -10
