--- a/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
@@ -179,7 +179,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
+KT_CONSTANT= 0.0257
 
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
@@ -204,7 +204,7 @@ INNER_ITER = 200
 %UNST_INT_ITER= 5
 %
 % Iteration number to begin unsteady restarts
-RESTART_ITER= 0
+UNST_RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
@@ -571,6 +571,11 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 %
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
+
+% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
+%
+% Value of the thermal diffusivity
+THERMAL_DIFFUSIVITY= 1.0
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
