Update some SU2 test cases

--- a/tests/SU2_SU2/config_channel.cfg
+++ b/tests/SU2_SU2/config_channel.cfg
@@ -84,7 +84,7 @@ SLOPE_LIMITER_FLOW = NONE
 TIME_DISCRE_FLOW = EULER_IMPLICIT
 
 %%%%%%%%%%%%%%%%%%%%%%%
-% REFERCENCE VALUES
+% REFERENCE VALUES
 %%%%%%%%%%%%%%%%%%%%%%%
 
 REF_ORIGIN_MOMENT_X = 0.00
@@ -98,7 +98,6 @@ REF_AREA = 0.01
 % CONVERGENCE CRITERIA
 %%%%%%%%%%%%%%%%%%%%%%%
 
-CONV_CRITERIA = RESIDUAL
 CONV_FIELD = RMS_PRESSURE, RMS_VELOCITY-X, RMS_VELOCITY-Y
 CONV_RESIDUAL_MINVAL = -12
 
