--- a/tests/SU2_SU2/config_channel_adj.cfg
+++ b/tests/SU2_SU2/config_channel_adj.cfg
@@ -102,7 +102,6 @@ REF_AREA = 0.01
 % CONVERGENCE CRITERIA
 %%%%%%%%%%%%%%%%%%%%%%%
 
-CONV_CRITERIA = RESIDUAL
 CONV_FIELD = RMS_ADJ_PRESSURE, RMS_ADJ_VELOCITY-X, RMS_ADJ_VELOCITY-Y
 CONV_RESIDUAL_MINVAL = -12
 
@@ -134,5 +133,6 @@ SOLUTION_ADJ_FILENAME = solution_fluid_adj_steady
 RESTART_ADJ_FILENAME = restart_fluid_adj_steady
 VOLUME_ADJ_FILENAME = fluid_adj_steady
 
-HISTORY_OUTPUT = ITER, RMS_RES
+HISTORY_OUTPUT = ITER, RMS_RES, SENSITIVITY
+SCREEN_OUTPUT= INNER_ITER, RMS_ADJ_PRESSURE, RMS_ADJ_VELOCITY-X, RMS_ADJ_VELOCITY-Y, SENS_PRESS, SENS_TEMP, SENS_VEL_IN, SENS_PRESS_OUT
 CONV_FILENAME= history_adj_fluid
