--- a/tests/broken/SU2_Modal/agard_dynamic_fluid.cfg
+++ b/tests/broken/SU2_Modal/agard_dynamic_fluid.cfg
@@ -141,7 +141,7 @@ SUTHERLAND_CONSTANT= 1.104000e+02
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-KT_CONSTANT= 0.0257
+THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
 
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
@@ -160,9 +160,6 @@ UNST_CFL_NUMBER= 0.0
 %
 % Number of internal iterations (dual time method)
 UNST_INT_ITER= 50
-%
-% Iteration number to begin unsteady restarts
-UNST_RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
@@ -350,7 +347,7 @@ ADJ_SHARP_LIMITER_COEFF= 3.0
 LIMITER_ITER= 999999
 %
 % 1st order artificial dissipation coefficients for
-%     the Lax–Friedrichs method ( 0.15 by default )
+%     the Laxï¿½Friedrichs method ( 0.15 by default )
 LAX_SENSOR_COEFF= 0.15
 %
 % 2nd and 4th order artificial dissipation coefficients for
@@ -358,7 +355,7 @@ LAX_SENSOR_COEFF= 0.15
 JST_SENSOR_COEFF= ( 0.5, 0.02 )
 %
 % 1st order artificial dissipation coefficients for
-%     the adjoint Lax–Friedrichs method ( 0.15 by default )
+%     the adjoint Laxï¿½Friedrichs method ( 0.15 by default )
 ADJ_LAX_SENSOR_COEFF= 0.15
 %
 % 2nd, and 4th order artificial dissipation coefficients for
@@ -436,11 +433,6 @@ CFL_REDUCTION_TURB= 1.0
 %
 % Relaxation coefficient
 RELAXATION_FACTOR_TURB= 1.0
-
-% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
-%
-% Value of the thermal diffusivity
-THERMAL_DIFFUSIVITY= 1.0
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
