--- a/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
+++ b/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
@@ -179,7 +179,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-KT_CONSTANT= 0.0257
+THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
 
 % ------------------------- UNSTEADY SIMULATION -------------------------------%
 %
@@ -202,9 +202,6 @@ UNST_CFL_NUMBER= 0.0
 % Number of internal iterations (dual time method)
 %UNST_INT_ITER= 50
 INNER_ITER = 100
-%
-% Iteration number to begin unsteady restarts
-UNST_RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
@@ -571,11 +568,6 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 %
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
-
-% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
-%
-% Value of the thermal diffusivity
-THERMAL_DIFFUSIVITY= 1.0
 
 % ------------------------ GRID DEFORMATION PARAMETERS ------------------------%
 %
