--- a/tests/SU2_Modal/staticAgard_fluid.cfg
+++ b/tests/SU2_Modal/staticAgard_fluid.cfg
@@ -156,7 +156,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-KT_CONSTANT= 0.0257
+THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
 
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
 %
@@ -171,9 +171,6 @@ MAX_TIME= 60.0
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
-%
-% Iteration number to begin unsteady restarts
-UNST_RESTART_ITER= 0
 
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 % Motion mach number (non-dimensional). Used for initializing a viscous flow
@@ -409,10 +406,6 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 CFL_REDUCTION_TURB= 1.0
 %
 
-% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
-%
-% Value of the thermal diffusivity
-THERMAL_DIFFUSIVITY= 1.0
 % ---------------- MESH DEFORMATION PARAMETERS (NEW SOLVER) -------------------%
 %
 % Use the reformatted pseudo-elastic solver for grid deformation
