--- a/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_BGS_parallel_SU2Conf.cfg
@@ -187,7 +187,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-KT_CONSTANT= 0.0257
+THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
 %
 
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
@@ -600,10 +600,6 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 CFL_REDUCTION_TURB= 1.0
 %
 
-% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
-%
-% Value of the thermal diffusivity
-THERMAL_DIFFUSIVITY= 1.0
 % ---------------- MESH DEFORMATION PARAMETERS (NEW SOLVER) -------------------%
 %
 % Use the reformatted pseudo-elastic solver for grid deformation
