--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -179,7 +179,7 @@ SUTHERLAND_CONSTANT= 110.4
 CONDUCTIVITY_MODEL= CONSTANT_PRANDTL
 %
 % Molecular Thermal Conductivity that would be constant (0.0257 by default)
-KT_CONSTANT= 0.0257
+THERMAL_CONDUCTIVITY_CONSTANT= 0.0257
 
 % ------------------------- TIME-DEPENDENT SIMULATION -------------------------------%
 %
@@ -198,9 +198,6 @@ MAX_TIME= 0.005
 %
 % Unsteady Courant-Friedrichs-Lewy number of the finest grid
 UNST_CFL_NUMBER= 0.0
-%
-% Iteration number to begin unsteady restarts
-UNST_RESTART_ITER= 0
 
 % Type of dynamic mesh (NONE, RIGID_MOTION, ROTATING_FRAME,
 %                       STEADY_TRANSLATION,
@@ -588,10 +585,6 @@ TIME_DISCRE_TURB= EULER_IMPLICIT
 % Reduction factor of the CFL coefficient in the turbulence problem
 CFL_REDUCTION_TURB= 1.0
 
-% --------------------- HEAT NUMERICAL METHOD DEFINITION ----------------------%
-%
-% Value of the thermal diffusivity
-THERMAL_DIFFUSIVITY= 1.0
 % ---------------- MESH DEFORMATION PARAMETERS (NEW SOLVER) -------------------%
 %
 % Use the reformatted pseudo-elastic solver for grid deformation
