--- a/tests/SU2_pyBeam/staticOnera_fluid.cfg
+++ b/tests/SU2_pyBeam/staticOnera_fluid.cfg
@@ -20,9 +20,6 @@ MATH_PROBLEM= DIRECT
 % Restart solution (NO, YES)
 RESTART_SOL= NO
 %
-% Write binary restart files (YES, NO)
-WRT_BINARY_RESTART= NO
-%
 % Read binary restart files (YES, NO)
 READ_BINARY_RESTART= NO
 %
@@ -300,13 +297,10 @@ SURFACE_FILENAME= surface_flow
 SURFACE_ADJ_FILENAME= surface_adjoint
 %
 % Writing solution frequency
-WRT_SOL_FREQ= 100
-%
-% Writing convergence history frequency
-WRT_CON_FREQ= 1
-%
+OUTPUT_WRT_FREQ=100
 % Screen output fields
 SCREEN_OUTPUT = (INNER_ITER, RMS_DENSITY, RMS_ENERGY, LIFT, DRAG)
+HISTORY_OUTPUT = (ITER, RMS_RES, AERO_COEFF)
 %
 % Files to output 
 % Possible formats : (TECPLOT, TECPLOT_BINARY, SURFACE_TECPLOT,
@@ -371,12 +365,6 @@ DEFORM_LINEAR_SOLVER_ERROR= 1E-14
 % Type of element stiffness imposed for FEA mesh deformation (INVERSE_VOLUME, 
 %                                          WALL_DISTANCE, CONSTANT_STIFFNESS)
 DEFORM_STIFFNESS_TYPE= INVERSE_VOLUME
-%
-% Visualize the surface deformation (NO, YES)
-VISUALIZE_SURFACE_DEF= NO
-%
-% Visualize the volume deformation (NO, YES)
-VISUALIZE_VOLUME_DEF= NO
 
 % -------------------- FREE-FORM DEFORMATION PARAMETERS -----------------------%
 %
