Tecplot -> CSV outputs

--- a/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
+++ b/tests/SU2_Metafor/CantileverSquareChannel_BGS_parallel_SU2Conf.cfg
@@ -651,7 +651,7 @@ SOLUTION_FILENAME = restart_flow.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output tabular file format (TECPLOT, CSV)
-TABULAR_FORMAT = TECPLOT
+TABULAR_FORMAT = CSV
 %
 %
 % Files to output 
@@ -659,7 +659,7 @@ TABULAR_FORMAT = TECPLOT
 %  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
 %  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
 % default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
-OUTPUT_FILES = (RESTART, TECPLOT, SURFACE_TECPLOT)
+OUTPUT_FILES = (RESTART, PARAVIEW, SURFACE_PARAVIEW)
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
