--- a/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
+++ b/tests/SU2_Metafor/AGARD445_Static_SU2Conf.cfg
@@ -649,8 +649,9 @@ SOLUTION_FILENAME= restart_flow.dat
 %
 % Restart adjoint input file
 SOLUTION_ADJ_FILENAME= solution_adj.dat
+%
 % Output tabular file format (TECPLOT, CSV)
-TABULAR_FORMAT = TECPLOT
+TABULAR_FORMAT = CSV
 %
 %
 % Files to output 
