--- a/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
+++ b/tests/SU2_RBM/PitchPlungeN0012_IQN_fsi_SU2Conf.cfg
@@ -692,7 +692,7 @@ SOLUTION_FILENAME= restart_flow.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output tabular file format (TECPLOT, CSV)
-TABULAR_FORMAT= TECPLOT
+TABULAR_FORMAT= CSV
 %
 % Output file convergence history (w/o extension)
 CONV_FILENAME= history
