Disable SU2 Battery on Windows

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,11 +5,12 @@ MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/DART_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/PFEM3D_Metafor)
 MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/VLM_Metafor)
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
-MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_pyBeam)
-# MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_SU2)
-IF(NOT WIN32)
+IF(NOT WIN32) # SU2 does not compile on Microsoft Visual Studio
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/DART_RBM)
     MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_RBM)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Metafor)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_Modal)
+    MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_pyBeam)
+    # MACRO_AddTest(${CMAKE_CURRENT_SOURCE_DIR}/SU2_SU2)
 ENDIF()
+
