Correct OF on direct RBM cfg file

--- a/tests/SU2_RBM/PitchPlungeAirfoil_HB_1_RBMConf.cfg
+++ b/tests/SU2_RBM/PitchPlungeAirfoil_HB_1_RBMConf.cfg
@@ -20,7 +20,7 @@ CSD_SOLVER = NATIVE
 % Kind of problem solved (DIRECT or ADJOINT)
 KIND_PROBLEM = DIRECT
 %
-OBJ_FUNCTION = PITCH_AMPLITUDE
+OBJ_FUNCTION = FLUID
 %
 MESH_FILE = ../../tests/SU2_RBM/models/mesh_NACA64A010_inviscid_coarse.su2
 %
